make index available

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "enwhats-db",
   "module": "index.ts",
+  "main": "src/index.ts",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
