--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enwhats-db",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "build": "bun build --target=node --outdir=dist --outfile=index.js ./src/index.ts",
